--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.2
+Date: 2021-05-16
+  Changes:
+    - Bugfixes
+    - Improved localization
+---------------------------------------------------------------------------------------------------
 Version: 0.5.0
 Date: 2021-05-16
   Notes:
