--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.3
+Date: 2021-05-21
+  Changes:
+    - Changed behavior of service tools
+---------------------------------------------------------------------------------------------------
 Version: 0.5.2
 Date: 2021-05-16
   Changes:
