--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.4
+Date: 2021-05-23
+  Changes:
+    - Updated translations
+    - Added Czech translation
+  Notes:
+    - Thanks to https://crowdin.com/profile/diraria/activity
+    - Russian translation isn't vague but "excessive" in some places
+---------------------------------------------------------------------------------------------------
 Version: 0.5.3
 Date: 2021-05-21
   Changes:
