--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.5
+Date: 2021-05-23
+  Changes:
+    - Fixed Russian translation
+---------------------------------------------------------------------------------------------------
 Version: 0.5.4
 Date: 2021-05-23
   Changes:
