--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.6
+Date: 2021-05-24
+  Changes:
+    - Players can't set too long text on surface
+    - Players can't make too big drawing
+---------------------------------------------------------------------------------------------------
 Version: 0.5.5
 Date: 2021-05-23
   Changes:
