--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.7
+Date: 2021-05-25
+  Bugfixes:
+    - Fixed interactions with some scenarios
+---------------------------------------------------------------------------------------------------
 Version: 0.5.6
 Date: 2021-05-24
   Changes:
