--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.9
+Date: 2021-05-26
+  Bugfixes:
+    - Updates colors correctly when several players online
+    - Properly uses data after update (probably will fix singleplayer mode)
+  Changes:
+    - Deleting user interfaces on other events
+---------------------------------------------------------------------------------------------------
 Version: 0.5.8
 Date: 2021-05-26
   Changes:
