--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.11
+Date: 2021-05-30
+  Changes:
+    - Added German translation (thanks to https://crowdin.com/profile/teite/activity)
+    - Other translations has been updated (thank you for contributions, I really appreciate it)
+  Notes:
+    - Translations: https://crowdin.com/project/factorio-mods-localization
+---------------------------------------------------------------------------------------------------
 Version: 0.5.10
 Date: 2021-05-28
   Bugfixes:
