--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.12
+Date: 2021-06-06
+  Changes:
+    - Updated German translation and other translations
+  Notes:
+    - Translations: https://crowdin.com/project/factorio-mods-localization  (thank you for contributions, I really appreciate it)
+---------------------------------------------------------------------------------------------------
 Version: 0.5.11
 Date: 2021-05-30
   Changes:
