--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.13
+Date: 2021-06-14
+  Bugfixes:
+    - Fixed output of dev mode
+    - Fixed translation of a command
+  Changes:
+    - Changed a command name
+---------------------------------------------------------------------------------------------------
 Version: 0.5.12
 Date: 2021-06-06
   Changes:
