--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,17 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.14
+Date: 2021-06-14
+  Bugfixes:
+    - Fixed conflict with laying tiles
+  Changes:
+    - Changed hotkeys
+    - Use CONTROL + [SHIFT] + Numpad DIVIDE/MULTIPLY to change brush size
+---------------------------------------------------------------------------------------------------
 Version: 0.5.13
 Date: 2021-06-14
   Bugfixes:
     - Fixed output of dev mode
-    - Fixed translation of a command
+    - Fixed description of a command
   Changes:
     - Changed a command name
 ---------------------------------------------------------------------------------------------------
