--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.17
+Date: 2021-07-10
+  Changes:
+    - Eraser is more stable
+---------------------------------------------------------------------------------------------------
 Version: 0.5.16
 Date: 2021-06-20
   Changes:
