--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.18
+Date: 2021-07-10
+  Changes:
+    - Minor changes
+---------------------------------------------------------------------------------------------------
 Version: 0.5.17
 Date: 2021-07-10
   Changes:
