--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.19
+Date: 2021-07-10
+  Bugfixes:
+    - Soome tools are more stable than before
+---------------------------------------------------------------------------------------------------
 Version: 0.5.18
 Date: 2021-07-10
   Changes:
@@ -7,7 +12,7 @@ Date: 2021-07-10
 Version: 0.5.17
 Date: 2021-07-10
   Changes:
-    - Eraser is more stable
+    - Trying to make eraser stable
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.16
 Date: 2021-06-20
