--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,8 @@
 ---------------------------------------------------------------------------------------------------
-Version: 0.5.19
-Date: 2021-07-10
+Version: 0.5.20
+Date: 2021-07-11
   Bugfixes:
-    - Soome tools are more stable than before
+    - Some tools are more stable than before
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.18
 Date: 2021-07-10
