--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,11 @@
 Version: 0.5.21
 Date: 2021-07-11
   Bugfixes:
+    - Fixed removing of data
+---------------------------------------------------------------------------------------------------
+Version: 0.5.21
+Date: 2021-07-11
+  Bugfixes:
     - Some tools are more stable than before
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.18
