--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.6.0
+Date: 2021-07-12
+  Features:
+    - Added "lights" as a tool (only for admins)
+  Changes:
+    - Optimized slightly
+  Notes:
+    - Refactored code
+---------------------------------------------------------------------------------------------------
 Version: 0.5.22
 Date: 2021-07-11
   Bugfixes:
