--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.6.1
+Date: 2021-07-12
+  Features:
+    - Added binding to entities for the light tool (fancy custom lights)
+  Bugfixes:
+    - Improved stability of recolor tool
+    - Added translation the light tool
+---------------------------------------------------------------------------------------------------
 Version: 0.6.0
 Date: 2021-07-12
   Features:
