--- a/changelog.txt
+++ b/changelog.txt
@@ -1,16 +1,21 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.6.2
+Date: 2021-07-12
+  Bugfixes:
+    - Improved stability of the light tool
+---------------------------------------------------------------------------------------------------
 Version: 0.6.1
 Date: 2021-07-12
   Features:
     - Added binding to entities for the light tool (fancy custom lights)
   Bugfixes:
-    - Improved stability of recolor tool
+    - Improved stability of the recolor tool
     - Added translation the light tool
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.0
 Date: 2021-07-12
   Features:
-    - Added "lights" as a tool (only for admins)
+    - Added "light tool" (only for admins)
   Changes:
     - Optimized slightly
   Notes:
