--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.2
 Date: 2021-07-12
+  Changes:
+    - Changed thumbnail
+---------------------------------------------------------------------------------------------------
+Version: 0.6.2
+Date: 2021-07-12
   Bugfixes:
     - Improved stability of the light tool
 ---------------------------------------------------------------------------------------------------
