--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.6.6
+Date: 2021-08-19
+  Changes:
+    - It's possible to turn off the mod outside the mod now
+  Notes:
+    - Refactored slightly
+---------------------------------------------------------------------------------------------------
 Version: 0.6.5
 Date: 2021-08-08
   Changes:
