--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.6.7
+Date: 2021-08-19
+  Bugfixes:
+    - Perhaps, fixed undo, redo
+---------------------------------------------------------------------------------------------------
 Version: 0.6.6
 Date: 2021-08-19
   Changes:
