--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.2
+Date: 2021-08-20
+  Changes:
+    - Added get_source() to "disable-brush-tools" interface
+---------------------------------------------------------------------------------------------------
 Version: 0.7.1
 Date: 2021-08-19
   Changes:
