--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.3
+Date: 2021-08-29
+  Changes:
+    - Added Brazilian Portuguese translation (thanks to @BM123499 (Bruno Melo) on crowdin)
+  Notes:
+    - Translations: https://crowdin.com/project/factorio-mods-localization (thank you for contributions, I really appreciate it)
+---------------------------------------------------------------------------------------------------
 Version: 0.7.2
 Date: 2021-08-20
   Changes:
