--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.4
+Date: 2021-09-28
+  Changes:
+    - Optimized sligthly
+---------------------------------------------------------------------------------------------------
 Version: 0.7.3
 Date: 2021-08-29
   Changes:
