--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.5
+Date: 2021-10-17
+  Changes:
+    - Added French translation (thanks to @Drilzxx_ (Kévin) on crowdin)
+  Notes:
+    - Translations: https://crowdin.com/project/factorio-mods-localization (thank you for contributions, I really appreciate it)
+---------------------------------------------------------------------------------------------------
 Version: 0.7.4
 Date: 2021-09-28
   Changes:
