--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.6
+Date: 2021-10-31
+  Changes:
+    - Updated Spanish translation (thanks to @shamisen on crowdin)
+    - Optmized
+  Notes:
+    - Translations: https://crowdin.com/project/factorio-mods-localization (thank you for contributions, I really appreciate it)
+---------------------------------------------------------------------------------------------------
 Version: 0.7.5
 Date: 2021-10-17
   Changes:
