--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,16 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.7
+Date: 2021-12-05
+  Changes:
+    - Updated French translation (thanks to @sollevix (David TAORMINA) on crowdin)
+  Notes:
+    - Translations: https://crowdin.com/project/factorio-mods-localization (thank you for contributions, I really appreciate it)
+---------------------------------------------------------------------------------------------------
 Version: 0.7.6
 Date: 2021-10-31
   Changes:
     - Updated Spanish translation (thanks to @shamisen on crowdin)
-    - Optmized
+    - Optimized
   Notes:
     - Translations: https://crowdin.com/project/factorio-mods-localization (thank you for contributions, I really appreciate it)
 ---------------------------------------------------------------------------------------------------
