--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.8
+Date: 2021-12-22
+  Changes:
+    - Changed event handler (slightly better performance)
+---------------------------------------------------------------------------------------------------
 Version: 0.7.7
 Date: 2021-12-05
   Changes:
