--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.8.1
+Date: 2021-01-22
+  Locale:
+    - Fixed some mistakes in English locale
+---------------------------------------------------------------------------------------------------
 Version: 0.8.0
 Date: 2021-01-09
   Locale:
