--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.8.2
+Date: 2022-11-06
+  Locale:
+    - Added Japanese translation (thanks to @flip365 (FLIP SLAY) on crowdin)
+    - Updated Brazilian Portuguese translation (thanks to @thoraras (Diego Lemos da Silva) on crowdin)
+    - Translations: https://crowdin.com/project/factorio-mods-localization (thank you for contributions, I really appreciate it)
+---------------------------------------------------------------------------------------------------
 Version: 0.8.1
 Date: 2021-01-22
   Locale:
