--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.8.3
+Date: 2022-12-11
+  Locale:
+    - Added Ukrainian translation (thanks to @de_jure (Yuriy) on crowdin)
+    - Translations: https://crowdin.com/project/factorio-mods-localization (thank you for contributions, I really appreciate it)
+---------------------------------------------------------------------------------------------------
 Version: 0.8.2
 Date: 2022-11-06
   Locale:
