--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.9.0
+Date: 2024-10-29
+  Changes:
+    - Updated for Factorio 2.0
+  Locale:
+    - Added Polish translation (thanks to @lasgra11 on crowdin)
+    - Updated Ukrainian translation (thanks to @Met_en_Bouldry on crowdin)
+    - Updated Dutch translation (thanks to @jordditters on crowdin)
+    - Translations: https://crowdin.com/project/factorio-mods-localization (thank you for contributions, I really appreciate it)
+---------------------------------------------------------------------------------------------------
 Version: 0.8.3
 Date: 2022-12-11
   Locale:
@@ -105,7 +115,7 @@ Date: 2021-07-25
     - Updated German translation
     - Translations: https://crowdin.com/project/factorio-mods-localization (thank you for contributions, I really appreciate it)
 ---------------------------------------------------------------------------------------------------
-Version: 0.6.2
+Version: 0.6.3
 Date: 2021-07-12
   Changes:
     - Changed thumbnail
@@ -129,7 +139,6 @@ Date: 2021-07-12
     - Added "light tool" (only for admins)
   Changes:
     - Optimized slightly
-  Notes:
     - Refactored code
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.22
