--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.9.1
+Date: 2025-11-05
+  Bugfixes:
+    - Fixed invalid iterations (erases properly now)
+---------------------------------------------------------------------------------------------------
 Version: 0.9.0
 Date: 2024-10-29
   Changes:
